--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ $ git checkout gh-pages
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-<a href="http://public.ixmaps.com/stage/maptune/maptune_flat.html?config=Libera.js">test</a>
+<a href="http://public.ixmaps.com.s3-website-eu-west-1.amazonaws.com/maptune/maptune_flat.html?param=Libera.js">test</a>
 <p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
 
       <footer class="site-footer">
