--- a/index.html
+++ b/index.html
@@ -48,6 +48,179 @@ $ git checkout gh-pages
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+		<p>MapTune è un Framework in Javascript per visualizzare geo data feed di vari formati.
+		MapTune può interpretare vari formati geodata 'standard' tra i quali KML, geoJson e GeoRSS ma 
+		anche tabelle georeferenziate in CSV. Inoltre il parser di MapTune è estendibile via plugin, e cosi adattabile a nuovi o proprietari formati, basta che si basino su XML o JSON.</p>
+		<p>Per caricare un dataset sulla mappa di MapTune, si definisce una descrizione della fonte dei dati e della rappresentazione sia per la mappa che per la lista.
+		Questa descrizione è un semplice oggetto in JSON. Di seguito quella per gli 'Eventi condivisi' usata per questa applicazione:</p>
+		<code>
+maptune.addFeedLayer('http://goo.gl/Fo9jnt',{
+  type:  'csv',
+  format:'csv',
+  flag:  'closed|noinfo|zoomto',
+  title: 'Eventi Condivisi',
+  parser: {
+    lat:       'lat',
+    lon:       'lng',
+    timeStart: 'Data inizio',
+    timeEnd:   'Data fine',
+    timeParse: function(value){var dateA = value.split(' ')[0].split('\/');return new Date(dateA[2],dateA[1]-1,dateA[0]);},
+    label:     'true',
+    info:      'Organizzatore|Note|Pagamento|Tipologia|Data inizio|Data fine|Luogo|Link|Email_contatto|Link_immagine ',
+    image:     'Link_immagine'   
+    },
+  layer:{ 
+    name:        'Eventi Condivisi',
+    description: 'Eventi OpenData in collaborazione con Comitato Matera 2019 Mappa ... ',
+    markerType : 'categorical',
+    sort       : 'timeUp',      
+    category   : 'Tipologia', 
+    categoryList: { 
+      Musica    : { 'markerImage' : 'resources/icons/map-icons-collection/music_classical.png',
+                    'smallImage' :  'resources/icons/default/default-small_violet.png'
+                  },
+      Teatro    : { 'markerImage' : 'resources/icons/map-icons-collection/theater.png',
+                    'smallImage' : 'resources/icons/default/default-small_violet.png'
+                  },
+      Danza     : { 'markerImage' : 'resources/icons/map-icons-collection/theater.png',
+                    'smallImage' : 'resources/icons/default/default-small_violet.png'
+                  },
+      Sport     : { 'markerImage' : 'resources/icons/map-icons-collection/indoor-arena.png',
+                    'smallImage' : 'resources/icons/default/default-small_orange.png'
+                  },
+      Mostre    : { 'markerImage' : 'resources/icons/map-icons-collection/museum_art.png',
+                    'smallImage' : 'resources/icons/default/default-small_violet.png'
+                  },
+      Cinema    : { 'markerImage' : 'resources/icons/map-icons-collection/cinema.png',
+                    'smallImage' : 'resources/icons/default/default-small_violet.png'
+                  },
+      Tradizione: { 'markerImage' : 'resources/icons/map-icons-collection/farmstand.png',
+                    'smallImage' : 'resources/icons/default/default-small_violet.png'
+                  },
+      'Altri eventi':
+                  { 'markerImage' : 'resources/icons/map-icons-collection/departmentstore.png',
+                    'smallImage' : 'resources/icons/default/default-small_red.png'
+                  }
+	  },
+    markerImage : 'resources/icons/default/default_red.png',
+    smallImage : 'resources/icons/default/default-small_red.png',
+    markerImageType : 'png',
+    initialTimeScope:'all',
+    },
+
+flag:'zoomto'});
+}
+		</code>
+		<br>		
+		<p>Come si può notare, non è solo l'oggetto JSON, ma anche la 'function call' in Javascript per aggiungere la nuova fonte alla mappa. Il primo argomento:</p>
+		<code>
+'http://goo.gl/Fo9jnt'
+		</code>
+		<p>definisce la sorgente dei dati, in questo caso un link ad un 'Google Spreadsheet', che contiene gli 'eventi condivisi'. Il link porta ad avere un documento in CSV</p>
+		<p>Il 'parser':</p> 
+		<code>
+parser: {
+lat:       'lat',
+lon:       'lng',
+timeStart: 'Data inizio',
+timeEnd:   'Data fine',
+timeParse: function(value){var dateA = value.split(' ')[0].split('\/');return new Date(dateA[2],dateA[1]-1,dateA[0]);},
+label:     'true',
+info:      'Organizzatore|Note|Pagamento|Tipologia|Data inizio|Data fine|Luogo|Link|Email_contatto|Link_immagine ',
+image:     'Link_immagine'   
+},
+		</code>
+		<p>definisce i campi della tabella in CSV dove si trovano: la posizione (lat,lon) dell'evento, la data di inizio e fine dell'evento, ed i campi da presentare nella lista o sulla mappa.</p> 
+		<p>l'oggetto 'layer':</p> 
+		<code>
+layer:{ 
+name:        'Eventi Condivisi',
+description: 'Eventi OpenData in collaborazione con Comitato Matera 2019 Mappa ... ',
+markerType : 'categorical',
+sort       : 'timeUp',      
+category   : 'Tipologia', 
+categoryList: { 
+  Musica    : { 'markerImage' : 'resources/icons/map-icons-collection/music_classical.png',
+				'smallImage' :  'resources/icons/default/default-small_violet.png'
+			  },
+  Teatro    : { 'markerImage' : 'resources/icons/map-icons-collection/theater.png',
+				'smallImage' : 'resources/icons/default/default-small_violet.png'
+			  },
+  Danza     : { 'markerImage' : 'resources/icons/map-icons-collection/theater.png',
+				'smallImage' : 'resources/icons/default/default-small_violet.png'
+			  },
+  Sport     : { 'markerImage' : 'resources/icons/map-icons-collection/indoor-arena.png',
+				'smallImage' : 'resources/icons/default/default-small_orange.png'
+			  },
+  Mostre    : { 'markerImage' : 'resources/icons/map-icons-collection/museum_art.png',
+				'smallImage' : 'resources/icons/default/default-small_violet.png'
+			  },
+  Cinema    : { 'markerImage' : 'resources/icons/map-icons-collection/cinema.png',
+				'smallImage' : 'resources/icons/default/default-small_violet.png'
+			  },
+  Tradizione: { 'markerImage' : 'resources/icons/map-icons-collection/farmstand.png',
+				'smallImage' : 'resources/icons/default/default-small_violet.png'
+			  },
+  'Altri eventi':
+			  { 'markerImage' : 'resources/icons/map-icons-collection/departmentstore.png',
+				'smallImage' : 'resources/icons/default/default-small_red.png'
+			  }
+  },
+		</code>
+		<p>definisce la rappresentazione categorizzata degli elementi sulla mappa</p>
+		<h3>parser plugin per 'MateraPulita'</h3>
+		<p>Nella lista dei sorgenti 'Open Data' da aggiungere alla mappa, si trova anche un feed in XML proprietario, 'http://www.materapulita.it/app/segnalazioniopen.xml',
+		che richiede un plugin per il parser di MapTune. Il plugin viene definito in un file Javascript con il nome 'map_feed.parse.MateraPulita.js' e riferito nella configurazione del feed come parametro 'type':'MateraPulita', quindi con lo stesso nome del parser plugin.
+		</p>
+		<code>
+...
+&lt;a href="javascript:maptune.addFeedLayer('http://www.materapulita.it/app/segnalazioniopen.xml',{
+  type:'<span style="color:#2244dd">MateraPulita</span>',
+  format:'xml',
+  flag:'open|showinfo|zoomto',
+  title:'MateraPulita'
+ });" &gt:MateraPulita (xml)&lt;/a&gt;
+...
+		</code>
+		<p style="margin-bottom:10px;">Il plugin deve definiere il parser propriertario più o meno cosi: </p>
+		<code>
+window.ixmaps = window.ixmaps || {};
+ixmaps.feed = ixmaps.feed || {};
+ixmaps.feed.parse = ixmaps.feed.parse || {};
+(function() {
+
+/**
+ * parse the feed data and make an ixmaps layer object  
+ * @param the data object received from the feed
+ * @param opt optional parameter object
+ * @type object
+ * @return an ixmaps layer object
+ */
+  ixmaps.feed.parse.<span style="color:#2244dd">MateraPulita</span> = function(data,opt){
+    if ( opt.format == "json" ) {
+        ...
+
+        <span style="color:#228844">// define at least one layer</span>
+
+        var <span style="color:#2244dd">layerset</span> = new ixmaps.feed.LayerSet(title);
+            layer    = layerset.addLayer(title);
+
+        <span style="color:#228844">// define the features</span>
+
+        var feature  = layer.addFeature(szTitle);
+            feature.setPosition(pointA[1],pointA[0]);
+
+        ...
+
+        return <span style="color:#2244dd">layerset</span>;
+    }
+    return null;
+  };
+})();
+
+		</code>
+		<p>Non aggiungo altro alla descrizione, ma per qualsiasi domanda sono a disposizione su:
+		guenter.richter@gmail.com</p>
 <a href="http://public.ixmaps.com.s3-website-eu-west-1.amazonaws.com/maptune/maptune_flat.html?param=Libera.js">test</a>
 <p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
 
