--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ flag:'zoomto'});
 }
 </code></pre>
 		<br>		
-		<p>Come si può notare, non è solo l'oggetto JSON, ma anche la 'function call' in Javascript per aggiungere la nuova fonte alla mappa. Il primo argomento:</p>
+		<p>Come si può notare, non è solo l'oggetto JSON, ma anche la 'function call' in Javascript per aggiungere la nuova fonte alla mappa. Il primo argumento:</p>
 <pre><code>
 'http://goo.gl/Fo9jnt'
 </code></pre>
@@ -106,6 +106,13 @@ image:     'Link_immagine'
 },
 </code></pre>
 		<p>definisce i campi della tabella in CSV dove si trovano: la posizione (lat,lon) dell'evento, la data di inizio e fine dell'evento, ed i campi da presentare nella lista o sulla mappa.</p> 
+<pre><code>
+parser: {
+timeStart: 'Data inizio',
+timeEnd:   'Data fine',
+timeParse: function(value){var dateA = value.split(' ')[0].split('\/');return new Date(dateA[2],dateA[1]-1,dateA[0]);},
+</code></pre>
+		<p>con 'timeParse' si può definire una funzione in JavaScript, che legge il valore di 'timeStart' e 'timeEnd' e crea un oggetto Date() con la data definita.</p> </p> 
 		<p>l'oggetto 'layer':</p> 
 <pre><code>
 layer:{ 
