--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 MapTune può interpretare vari formati geodata 'standard' tra i quali KML, geoJson e GeoRSS ma 
 anche tabelle georeferenziate in CSV. Inoltre il parser di MapTune è estendibile via plugin, e cosi adattabile a nuovi o proprietari formati, basta che si basino su XML o JSON.</p>
 
-<a href=http://public.ixmaps.com.s3-website-eu-west-1.amazonaws.com/maptune/maptune_flat.html?param=Libera.js" class="btn">online demo</a>
+<a href=http://public.ixmaps.com.s3-website-eu-west-1.amazonaws.com/maptune/maptune_flat.html?param=Libera.js" class="btn btn-default">online demo</a>
 
 <p>Per caricare un dataset sulla mappa di MapTune, si definisce una descrizione della fonte dei dati e della rappresentazione sia per la mappa che per la lista.
 Questa descrizione è un semplice oggetto in JSON. Di seguito un esempio che dimostra alcuni delle possibilità di configurare la visualizzazione e l'interpretazione dei dati:</p>
