--- a/index.html
+++ b/index.html
@@ -209,8 +209,9 @@ maptune.feed.parse = maptune.feed.parse || {};
 </code></pre>
 		<p>Non aggiungo altro alla descrizione, ma per qualsiasi domanda sono a disposizione su:
 		guenter.richter@gmail.com</p>
-		
+<section class="page-header">		
 <a href=http://public.ixmaps.com.s3-website-eu-west-1.amazonaws.com/maptune/maptune_flat.html?param=BasilicataEventi.js" class="btn-default">see it live</a>
+</section>
 <p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
 
       <footer class="site-footer">
