--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ maptune.feed.parse = maptune.feed.parse || {};
 		<p>Non aggiungo altro alla descrizione, ma per qualsiasi domanda sono a disposizione su:
 		guenter.richter@gmail.com</p>
 		
-	<a href="http://public.ixmaps.com.s3-website-eu-west-1.amazonaws.com/maptune/maptune_flat.html?config=BasilicataEventi.js" class="btn-default">&nbsp;see it live&nbsp;</a>
+	<h3><a href="http://public.ixmaps.com.s3-website-eu-west-1.amazonaws.com/maptune/maptune_flat.html?config=BasilicataEventi.js" class="btn-default">&nbsp;&nbsp;see it live&nbsp;&nbsp;</a></h3>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/gjrichter/maptune">Maptune</a> is maintained by <a href="https://github.com/gjrichter">gjrichter</a>.</span>
