--- a/maptune_flat.html
+++ b/maptune_flat.html
@@ -404,14 +404,13 @@
 	<div class="container">
 		<hr>
 		<div class="row">
-			<div class="col-lg-6 col-lg-offset-3">
+			<div class="col-lg-6 ">
 			Credits:<br>
-			sorgente dei dati: <a href="http://dati.comune.matera.it/">Portale Dati aperti del Comune di Matera</a><br>
 			Mapstraction: <a href="http://mapstraction.com"</a>mapstraction.com</a><br>
 			Leaflet: <a href="http://leafletjs.com">leafletjs.com</a><br>
 			mapicons:  <a href="http://mapicons.nicolasmollet.com">mapicons.nicolasmollet.com</a><br>
-			bootstrap: <a href="http://getbootstrap.com/">getbootstrap.com</a> glyphicons: <a href="http://glyphicons.com"</a>glyphicons.com</a><br>
-			bootstrap template by BlackTie.co - Attribution License 3.0 - 2013<br>
+			bootstrap: <a href="http://getbootstrap.com/">getbootstrap.com</a><br>
+			glyphicons: <a href="http://glyphicons.com"</a>glyphicons.com</a><br>
 			</div>
 			<div class="col-lg-3"></div>
 		</div><!-- /row -->
