--- a/all_feeds.html
+++ b/all_feeds.html
@@ -581,6 +581,34 @@ v						parser:{
 						Tolentino open data</a>
 					<br><span class="description">formato originale: shapefile --> trasformato: GeoJSON</span>
 				</li></ul>
+
+				<h3 style="margin-top:10px;margin-bottom:2px">P.A.I. Bacino Tronto</h3> 
+				<p> 
+					<ul><li>
+					<a class="touch" href="javascript:maptune.addFeedLayer('http://maps.ixmaps.com/assets/maps/layer/jsonp/franeesondazioni.js.gz',
+						{type:'data',
+						 format:'json',
+						 name:'Frane &amp; Esondazioni',
+						 flag:'zoomto|checklayer'
+						 });" >
+						Frane &amp; Esondazioni <span style="font-size:8px;">(102 kb)</a>
+					</li></ul>
+				</p>
+				<h3 style="margin-top:10px;margin-bottom:2px">PRG Cupra</h3> 
+				<p> 
+					<ul><li>
+					<a class="touch" href="javascript:maptune.addFeedLayer('http://maps.ixmaps.com/assets/maps/layer/jsonp/Cupra_PRG.js.gz',
+						{type:'data',
+						 format:'json',
+						 name:'Cupra - Piano Regolatore',
+						 flag:'zoomto|checklayer'
+						 });" >
+						Piano Regolatore Cupramarittima - 2000 <span style="font-size:8px;"></a>
+					</li></ul>
+				</p>
+
+
+
 				</div>
 				<h3>
 					Open Data - Washington DC 
