--- a/index.html
+++ b/index.html
@@ -211,9 +211,11 @@ maptune.feed.parse = maptune.feed.parse || {};
 		<p>Maptune fornisce una implementazione della sua libreria Javascript con una pagina HTML reattiva, maptune_flat.html, che contiene 
 		gli elementi principali per l'applicazione: la mappa e la lista degli elementi mappati, un filtro testuale
 		un menu, tutto configurabile via un config file (.js)</p>
+		<p>l'url all'applicazione è più o meno cosi</p>
 <pre><code>
-path/maptune_flat?config=Libera.js
+...path/maptune_flat?config=Libera.js
 </code></pre>
+		<p>in seguito da esempio il config file utilizzato nella 'online demo'</p>
 <pre><code>
 var MapParam = {
 	"default":
@@ -223,9 +225,7 @@ var MapParam = {
 		"markerImageType" : "png"
 		}
 	,
-	"noItemText" : "<span style=\"color:#888\">lista vuota <br>"+
-			"aggiungi un layer via <a href=\"javascript:openMegaBox(null,'feed-dialog',MapParam.layerdialog.href,'add layer','auto',500,400)\"><span style=\"font-weight:bold;border:solid #ddd 1px;padding:2px;\">&nbsp;+ add&nbsp;</span></a><br><br>"+
-			"info <a href=\"javascript:openMegaBox(null,'feed-dialog','./about.html','about','auto',500,400)\"><span style=\"font-weight:bold;border:solid #ddd 1px;padding:2px;\">&nbsp;i&nbsp;</span></a></span>"
+	"noItemText" : "<span style=\"color:#888\">lista vuota <br>",
 	,
 	"layerdialog" :{"href":"all_feeds.html"}
 	,
@@ -264,7 +264,7 @@ __init = function(){
 			  "markerImage" : "resources/icons/map-icons-collection/libera.png",
 			  "smallImage" : "resources/icons/default/default-small_orange.png",
 			  "markerImageType" : "png",
-			  "description": '<div id="infodiv" style="margin-top:-10px;color:#aaa;">Elenco Beni Confiscati tratto dal GeoBlog di Libera Piemonte; csv preparato da Cesare Gerbinio</a></div>'
+			  "description": 'Elenco Beni Confiscati tratto dal GeoBlog di Libera Piemonte; csv preparato da Cesare Gerbinio</a></div>'
 			},
 
 		flag:'zoomto'});
@@ -272,8 +272,9 @@ __init = function(){
 
 setTimeout("__init()",2000);
 </code></pre>
+		<p>La pagina html dell'implementazione: maptune_flat.html si trova nel REPO</p>
 		
-		<p>Non aggiungo altro alla descrizione, ma per qualsiasi domanda sono a disposizione su:
+		<p>Per qualsiasi domanda sono a disposizione su:
 		guenter.richter@gmail.com</p>
 		
 	<h3><a href="http://public.ixmaps.com.s3-website-eu-west-1.amazonaws.com/maptune/maptune_flat.html?config=BasilicataEventi.js" class="btn-default">&nbsp;&nbsp;see it live&nbsp;&nbsp;</a></h3>
