--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ var MapParam = {
 		"markerImageType" : "png"
 		}
 	,
-	"noItemText" : "<span style=\"color:#888\">lista vuota <br>",
+	"noItemText" : "lista vuota",
 	,
 	"layerdialog" :{"href":"all_feeds.html"}
 	,
