--- a/index.html
+++ b/index.html
@@ -274,6 +274,8 @@ setTimeout("__init()",2000);
 </code></pre>
 		<p>La pagina html dell'implementazione: maptune_flat.html si trova nel REPO</p>
 		
+		<p>Una documentazione del API di maptune sara disponibile in breve</p>
+		
 		<p>Per qualsiasi domanda sono a disposizione su:
 		guenter.richter@gmail.com</p>
 		
