--- a/index.html
+++ b/index.html
@@ -207,7 +207,9 @@ maptune.feed.parse = maptune.feed.parse || {};
 })();
 
 </code></pre>
-		<h3>esempio di implementazione via template 'maptune_flat.html'</h3>
+<br>
+<br>
+		<h3>Esempio di implementazione via template 'maptune_flat.html'</h3>
 		<p>Maptune fornisce una implementazione della sua libreria Javascript con una pagina HTML reattiva, maptune_flat.html, che contiene 
 		gli elementi principali per l'applicazione: la mappa e la lista degli elementi mappati, un filtro testuale
 		un menu, tutto configurabile via un config file (.js)</p>
